--- a/Landing Page HTML/index.html
+++ b/Landing Page HTML/index.html
@@ -15,6 +15,9 @@
         <div class="textos-hero">
             <h1>Bienvenido a InfoChat</h1>
             <p>La mejor documentacion de chatbots para tu servicio</p>
+            <img class="img-principal" src="./img/Libertador 1.png" alt="">
+            <br />
+            <br>
             <a href="#contacto">Comenzar</a> 
         </div>
         <div class="svg-hero" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
@@ -26,9 +29,9 @@
 
 
     <section class="wave-contenedor website">
-        <img src="img/Libertador 1.png" alt="">
+        <img src="img/Escudo.png" alt="">
         <div class="contenedor-textos-main">
-            <h2 class="titulo left">LibreBot</h2>
+            <h2 class="titulo">LibreBot</h2>
             <p class="parrafo">La Universidad Libre seccional Baranquilla presenta el prototipo LibreBot, un chatbot diseñado para ayudar a los estudaintes
                 de ingeniera en procesos como el conocimiento del funcionamineto de la universidad, ubicacion de salones, laboratiorios, entre otras cosas.
             </p>
@@ -36,11 +39,12 @@
         </div>
     </section>
 
-    <section class="info">
-        <div class="contenedor">
-            <h2 class="titulo left">Estoy aquí para ayudar.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <section class="wave-contenedor website">
+        
+        <div class="contenedor-textos-main">
+            <p class="titulo">Estoy aquí para ayudar </p>
         </div>
+        <img class="container_img" src="img/Libertador 2.png" alt="">
     </section>
 
     <section class="cards contenedor">
