--- a/Landing Page HTML/index.html
+++ b/Landing Page HTML/index.html
@@ -29,7 +29,7 @@
 
 
     <section class="wave-contenedor website">
-        <img src="img/Escudo.png" alt="">
+        <img class="container_img" src="img/Escudo.png" alt="">
         <div class="contenedor-textos-main">
             <h2 class="titulo">LibreBot</h2>
             <p class="parrafo">La Universidad Libre seccional Baranquilla presenta el prototipo LibreBot, un chatbot diseñado para ayudar a los estudaintes
@@ -48,18 +48,22 @@
     </section>
 
     <section class="cards contenedor">
-        <h2 class="titulo">Our services</h2>
+        <h2 class="titulo">Usos de chatbot</h2>
         <div class="content-cards">
             <article class="card">
                 <i class="far fa-clone"></i>
-                <h3>Title Card</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <h3>Ventajas</h3>
+                <p>Atencion 24/7 </p>
+                <p>Respuestas rápidas</p>
+                <p>Automatización de tareas</p>
                 <a href="" class="cta">Learn more</a>
             </article>
             <article class="card">
                 <i class="fas fa-database"></i>
-                <h3>Title Card</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <h3>Usos</h3>
+                <p>Servicio al Cliente</p>
+                <p>Información</p>
+                <p>Noticias</p>
                 <a href="" class="cta">Learn more</a>
             </article>
             <article class="card">
@@ -77,13 +81,9 @@
 
     <footer id="contacto">
         <div class="contenedor">
-            <h2 class="titulo">Contact us</h2>
-            <form action="" class="form">
-                <input class="input"  type="text" name="" id="" placeholder="Nombre">
-                <input class="input"  type="email" name="" id="" placeholder="Email">
-                <textarea  class="input" name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
-                <input class="input"  type="submit" value="Enviar">
-            </form>
+            <div class="container_copyright">
+                <span>© Jesus Espinoza</span>
+            <span>© Ruben Hadechine</span></div>
         </div>
     </footer>
 
