--- a/Landing Page HTML/index.html
+++ b/Landing Page HTML/index.html
@@ -40,18 +40,19 @@
     </section>
 
     <section class="wave-contenedor website">
-        
-        <div class="contenedor-textos-main">
-            <p class="titulo">Estoy aquí para ayudar </p>
+      <img class="container_img" src="img/Libertador 2.png" alt="">
+          <div class="container_p"><p class="titulo">Estoy aquí para ayudar </p></div>  
         </div>
-        <img class="container_img" src="img/Libertador 2.png" alt="">
+        
     </section>
 
     <section class="cards contenedor">
         <h2 class="titulo">Usos de chatbot</h2>
         <div class="content-cards">
             <article class="card">
-                <i class="far fa-clone"></i>
+                <br>
+               <img src="./img/check.png" alt="">
+               <br>
                 <h3>Ventajas</h3>
                 <p>Atencion 24/7 </p>
                 <p>Respuestas rápidas</p>
@@ -59,7 +60,8 @@
                 <a href="" class="cta">Learn more</a>
             </article>
             <article class="card">
-                <i class="fas fa-database"></i>
+                <br>
+                <img src="./img/questions.png" alt="">
                 <h3>Usos</h3>
                 <p>Servicio al Cliente</p>
                 <p>Información</p>
