--- a/Landing Page HTML/index.html
+++ b/Landing Page HTML/index.html
@@ -29,7 +29,7 @@
 
 
     <section class="wave-contenedor website">
-        <img class="container_img" src="img/Escudo.png" alt="">
+        <img class="container_img" src="img/logo.png" alt="">
         <div class="contenedor-textos-main">
             <h2 class="titulo">LibreBot</h2>
             <p class="parrafo">La Universidad Libre seccional Baranquilla presenta el prototipo LibreBot, un chatbot diseñado para ayudar a los estudaintes
@@ -72,9 +72,14 @@
         </div>
     </section>
 
-  
-
-   
+    <div class="chat">
+        <iframe
+    allow="microphone;"
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/675c61f4-1627-44b7-a672-83de8a91bc52">
+</iframe>
+    </div>
 
     <footer id="contacto">
         <div class="contenedor">
