--- a/Landing Page HTML/index.html
+++ b/Landing Page HTML/index.html
@@ -27,6 +27,7 @@
             </svg></div>
     </header>
 
+   
 
     <section class="wave-contenedor website">
         <img class="container_img" src="img/logo.png" alt="">
@@ -43,9 +44,18 @@
       <img class="container_img" src="img/Libertador 2.png" alt="">
           <div class="container_p"><p class="titulo">Estoy aquí para ayudar </p></div>  
         </div>
-        
     </section>
 
+        <div class="container_chatbot">
+            <iframe
+        allow="microphone;"
+        width="350"
+        height="450"
+        src="https://console.dialogflow.com/api-client/demo/embedded/675c61f4-1627-44b7-a672-83de8a91bc52">
+    </iframe>
+        </div>
+   
+    
     <section class="cards contenedor">
         <h2 class="titulo">Usos de chatbot</h2>
         <div class="content-cards">
@@ -72,14 +82,7 @@
         </div>
     </section>
 
-    <div class="chat">
-        <iframe
-    allow="microphone;"
-    width="350"
-    height="430"
-    src="https://console.dialogflow.com/api-client/demo/embedded/675c61f4-1627-44b7-a672-83de8a91bc52">
-</iframe>
-    </div>
+   
 
     <footer id="contacto">
         <div class="contenedor">
